--- a/src/styles.css
+++ b/src/styles.css
@@ -334,7 +334,7 @@
   padding: 0 20px 0 25px;
   display: flex;
   justify-content: space-between;
-  background: url("assets/sh.jpg") center center/cover no-repeat;
+  background: url("assets/sh.png") center center/cover no-repeat;
 }
 .main__greeting {
   margin-top: 6px;
@@ -461,7 +461,9 @@
   from {
     transform: scale(0.2);
   }
-to-transform: scale(1);
+  to {
+    transform: scale(1);
+  }
 }
 * {
   box-sizing: border-box;
