--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-
 .adjust-bar {
   -webkit-appearance: none;
   appearance: none;
@@ -338,6 +337,7 @@
   margin-top: 6px;
   font-size: 27px;
   font-weight: 700;
+  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .main__info {
   width: 61.585%;
@@ -616,3 +616,4 @@ html {
 .panel__icon_clock {
   background: url("assets/panel__icon_clock.svg") center center/contain no-repeat;
 }
+
