Performance [homework]: обрезал глифы шривтов, перевел в формат woff2

--- a/src/fonts/pt_sans.css
+++ b/src/fonts/pt_sans.css
@@ -2,13 +2,11 @@
 	font-family: 'PT Sans';
 	font-style: normal;
 	font-weight: bold;
-	src: url('pts75f_w.eot');
-	src: local('PT Sans Bold'), url('PTS75F_W.woff') format('woff');
+	src: local('PT Sans Bold'), url('pts75f_w.woff2') format('woff2');
 }
 
 @font-face {
 	font-family: 'PT Sans Narrow';
 	font-weight: bold;
-	src: url('ptn77f_w.eot');
-	src: local('PT Sans Narrow Bold'), url('PTN77F_W.woff') format('woff');
+	src: local('PT Sans Narrow Bold'), url('ptn77f_w.woff2') format('woff2');
 }
