--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: 'PT Sans';
+	font-style: normal;
+	font-weight: bold;
+	src: url('fonts/PTS75F_W.eot');
+	src: local('PT Sans Bold'), url('fonts/PTS75F_W.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'PT Sans Narrow';
+	font-weight: bold;
+	src: url('fonts/ptn77f_w.eot');
+	src: local('PT Sans Narrow Bold'), url('fonts/PTN77F_W.woff') format('woff');
+}
 
 .adjust-bar {
   -webkit-appearance: none;
