--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 	font-style: normal;
 	font-weight: bold;
 	src: url('fonts/PTS75F_W.eot');
-	src: local('PT Sans Bold'), url('fonts/PTS75F_W.woff') format('woff');
+  src: local('PT Sans Bold'), url('fonts/subset-PTSans-Bold.woff2') format('woff2');
 }
 
 @font-face {
